--- a/tests/test_SNP_annotation.ipynb
+++ b/tests/test_SNP_annotation.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-28T16:01:47.846688Z",
-     "start_time": "2024-09-28T16:01:47.842659Z"
+     "end_time": "2024-09-29T08:37:47.571945Z",
+     "start_time": "2024-09-29T08:37:47.561344Z"
     }
    },
    "outputs": [],
@@ -27,21 +27,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-28T16:01:48.764541Z",
-     "start_time": "2024-09-28T16:01:48.761618Z"
+     "end_time": "2024-09-29T08:37:48.746892Z",
+     "start_time": "2024-09-29T08:37:48.219185Z"
     }
    },
    "id": "996b5d318fc58557",
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "['lineage4', 'lineage4.9']"
+      "text/plain": "[{'allele': '931123_T',\n  'lineage': 'lineage4',\n  'lineage_name': 'Euro-American'},\n {'allele': '1759252_G',\n  'lineage': 'lineage4.9',\n  'lineage_name': 'Euro-American (H37Rv-like)'}]"
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,12 +54,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-28T16:01:49.400766Z",
-     "start_time": "2024-09-28T16:01:49.293329Z"
+     "end_time": "2024-09-29T08:37:49.322317Z",
+     "start_time": "2024-09-29T08:37:49.181655Z"
     }
    },
    "id": "f9319d6e5acb8fc6",
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          POS REF ALT     GENE           VARIANT             ANNOTATION  \\\n",
+      "          POS REF ALT     GENE           VARIANT           VARIANT_TYPE  \\\n",
       "0        1849   C   A     dnaN    dnaN_c.-203C>A  upstream_gene_variant   \n",
       "1        1977   A   G     dnaN     dnaN_c.-75A>G  upstream_gene_variant   \n",
       "2        4013   T   C     recF  recF_p.Ile245Thr       missense_variant   \n",
@@ -100,111 +100,69 @@
    ],
    "source": [
     "VA = VariantAnnotator(vcf.SNP)\n",
-    "print(VA.annotate())"
+    "print(VA.SnpEffectAnnotation())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-28T16:01:51.192246Z",
-     "start_time": "2024-09-28T16:01:50.978236Z"
+     "end_time": "2024-09-29T08:37:50.645266Z",
+     "start_time": "2024-09-29T08:37:50.241727Z"
     }
    },
    "id": "aab6f3bc7621e39e",
-   "execution_count": 16
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "'CCT'"
+      "text/plain": "Empty DataFrame\nColumns: []\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rel_pos = 163705-163366\n",
-    "genes['cyp138']['sequence'][rel_pos:rel_pos+3]"
+    "VA.EpitopeAnnotation()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-28T15:56:27.868648Z",
-     "start_time": "2024-09-28T15:56:27.863089Z"
+     "end_time": "2024-09-29T08:37:52.408332Z",
+     "start_time": "2024-09-29T08:37:52.335946Z"
     }
    },
    "id": "2f0b69dd44fbd567",
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "          POS REF ALT\n0        1849   C   A\n1        1977   A   G\n2        4013   T   C\n3        7362   G   C\n4        7585   G   C\n...       ...  ..  ..\n1281  4393590   C   G\n1282  4397736   C   T\n1283  4407588   T   C\n1284  4407927   T   G\n1285  4408923   C   T\n\n[1286 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>POS</th>\n      <th>REF</th>\n      <th>ALT</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1849</td>\n      <td>C</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1977</td>\n      <td>A</td>\n      <td>G</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4013</td>\n      <td>T</td>\n      <td>C</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>7362</td>\n      <td>G</td>\n      <td>C</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7585</td>\n      <td>G</td>\n      <td>C</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1281</th>\n      <td>4393590</td>\n      <td>C</td>\n      <td>G</td>\n    </tr>\n    <tr>\n      <th>1282</th>\n      <td>4397736</td>\n      <td>C</td>\n      <td>T</td>\n    </tr>\n    <tr>\n      <th>1283</th>\n      <td>4407588</td>\n      <td>T</td>\n      <td>C</td>\n    </tr>\n    <tr>\n      <th>1284</th>\n      <td>4407927</td>\n      <td>T</td>\n      <td>G</td>\n    </tr>\n    <tr>\n      <th>1285</th>\n      <td>4408923</td>\n      <td>C</td>\n      <td>T</td>\n    </tr>\n  </tbody>\n</table>\n<p>1286 rows × 3 columns</p>\n</div>"
+      "text/plain": "         POS REF ALT   GENE            VARIANT      VARIANT_TYPE    IMPACT  \\\n0       4013   T   C   recF   recF_p.Ile245Thr  missense_variant  MODERATE   \n1       4013   T   C   recF   recF_p.Ile245Thr  missense_variant  MODERATE   \n2       7362   G   C   gyrA    gyrA_p.Glu21Gln  missense_variant  MODERATE   \n3       7585   G   C   gyrA    gyrA_p.Ser95Thr  missense_variant  MODERATE   \n4       7585   G   C   gyrA    gyrA_p.Ser95Thr  missense_variant  MODERATE   \n..       ...  ..  ..    ...                ...               ...       ...   \n567  4378504   T   C  eccC2  eccC2_p.Asp650Gly  missense_variant  MODERATE   \n568  4378943   T   G  eccC2  eccC2_p.Asn504His  missense_variant  MODERATE   \n569  4379680   C   G  eccC2  eccC2_p.Arg258Pro  missense_variant  MODERATE   \n570  4407927   T   G    gid     gid_p.Glu92Asp  missense_variant  MODERATE   \n571  4407927   T   G    gid     gid_p.Glu92Asp  missense_variant  MODERATE   \n\n    gene_name    locus  domain_id  \\\n0        recF   Rv0003  TIGR00611   \n1        recF   Rv0003    PF02463   \n2        gyrA   Rv0006  TIGR01063   \n3        gyrA   Rv0006  TIGR01063   \n4        gyrA   Rv0006    PF00521   \n..        ...      ...        ...   \n567     eccC2  Rv3894c  TIGR03924   \n568     eccC2  Rv3894c  TIGR03924   \n569     eccC2  Rv3894c  TIGR03924   \n570       gid  Rv3919c  TIGR00138   \n571       gid  Rv3919c    PF02527   \n\n                                           domain_name  \\\n0              DNA replication and repair protein RecF   \n1                      RecF/RecN/SMC N terminal domain   \n2                                 DNA gyrase subunit A   \n3                                 DNA gyrase subunit A   \n4               DNA gyrase/topoisomerase IV, subunit A   \n..                                                 ...   \n567                   type VII secretion protein EccCa   \n568                   type VII secretion protein EccCa   \n569                   type VII secretion protein EccCa   \n570  16S rRNA (guanine(527)-N(7))-methyltransferase...   \n571             rRNA small subunit methyltransferase G   \n\n                                    domain_description  genome_pos_start  \\\n0    <p>This family is based on the phylogenomic an...              3280   \n1    <p>This domain is found at the N terminus of S...              3283   \n2    <p>This model describes the common type II DNA...              7344   \n3    <p>This model describes the common type II DNA...              7344   \n4               DNA gyrase/topoisomerase IV; subunit A              7416   \n..                                                 ...               ...   \n567  <p>This model represents the N-terminal domain...           4378233   \n568  <p>This model represents the N-terminal domain...           4378233   \n569  <p>This model represents the N-terminal domain...           4378233   \n570  <p>RsmG was previously called GidB (glucose-in...           4407588   \n571  <p>This is a family of bacterial glucose inhib...           4407600   \n\n     genome_pos_end  gene_pos_start  gene_pos_end interpro_id source_database  \n0              4419               0          1139   IPR001238         ncbifam  \n1              4356               3          1076   IPR003395            pfam  \n2              9761              42          2459        None         ncbifam  \n3              9761              42          2459        None         ncbifam  \n4              8774             114          1472   IPR002205            pfam  \n..              ...             ...           ...         ...             ...  \n567         4380386            1971          4124   IPR023836         ncbifam  \n568         4380386            1971          4124   IPR023836         ncbifam  \n569         4380386            1971          4124   IPR023836         ncbifam  \n570         4408148              60           620   IPR003682         ncbifam  \n571         4408160              72           632   IPR003682            pfam  \n\n[572 rows x 18 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>POS</th>\n      <th>REF</th>\n      <th>ALT</th>\n      <th>GENE</th>\n      <th>VARIANT</th>\n      <th>VARIANT_TYPE</th>\n      <th>IMPACT</th>\n      <th>gene_name</th>\n      <th>locus</th>\n      <th>domain_id</th>\n      <th>domain_name</th>\n      <th>domain_description</th>\n      <th>genome_pos_start</th>\n      <th>genome_pos_end</th>\n      <th>gene_pos_start</th>\n      <th>gene_pos_end</th>\n      <th>interpro_id</th>\n      <th>source_database</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4013</td>\n      <td>T</td>\n      <td>C</td>\n      <td>recF</td>\n      <td>recF_p.Ile245Thr</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>recF</td>\n      <td>Rv0003</td>\n      <td>TIGR00611</td>\n      <td>DNA replication and repair protein RecF</td>\n      <td>&lt;p&gt;This family is based on the phylogenomic an...</td>\n      <td>3280</td>\n      <td>4419</td>\n      <td>0</td>\n      <td>1139</td>\n      <td>IPR001238</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4013</td>\n      <td>T</td>\n      <td>C</td>\n      <td>recF</td>\n      <td>recF_p.Ile245Thr</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>recF</td>\n      <td>Rv0003</td>\n      <td>PF02463</td>\n      <td>RecF/RecN/SMC N terminal domain</td>\n      <td>&lt;p&gt;This domain is found at the N terminus of S...</td>\n      <td>3283</td>\n      <td>4356</td>\n      <td>3</td>\n      <td>1076</td>\n      <td>IPR003395</td>\n      <td>pfam</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>7362</td>\n      <td>G</td>\n      <td>C</td>\n      <td>gyrA</td>\n      <td>gyrA_p.Glu21Gln</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>gyrA</td>\n      <td>Rv0006</td>\n      <td>TIGR01063</td>\n      <td>DNA gyrase subunit A</td>\n      <td>&lt;p&gt;This model describes the common type II DNA...</td>\n      <td>7344</td>\n      <td>9761</td>\n      <td>42</td>\n      <td>2459</td>\n      <td>None</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>7585</td>\n      <td>G</td>\n      <td>C</td>\n      <td>gyrA</td>\n      <td>gyrA_p.Ser95Thr</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>gyrA</td>\n      <td>Rv0006</td>\n      <td>TIGR01063</td>\n      <td>DNA gyrase subunit A</td>\n      <td>&lt;p&gt;This model describes the common type II DNA...</td>\n      <td>7344</td>\n      <td>9761</td>\n      <td>42</td>\n      <td>2459</td>\n      <td>None</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7585</td>\n      <td>G</td>\n      <td>C</td>\n      <td>gyrA</td>\n      <td>gyrA_p.Ser95Thr</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>gyrA</td>\n      <td>Rv0006</td>\n      <td>PF00521</td>\n      <td>DNA gyrase/topoisomerase IV, subunit A</td>\n      <td>DNA gyrase/topoisomerase IV; subunit A</td>\n      <td>7416</td>\n      <td>8774</td>\n      <td>114</td>\n      <td>1472</td>\n      <td>IPR002205</td>\n      <td>pfam</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>567</th>\n      <td>4378504</td>\n      <td>T</td>\n      <td>C</td>\n      <td>eccC2</td>\n      <td>eccC2_p.Asp650Gly</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>eccC2</td>\n      <td>Rv3894c</td>\n      <td>TIGR03924</td>\n      <td>type VII secretion protein EccCa</td>\n      <td>&lt;p&gt;This model represents the N-terminal domain...</td>\n      <td>4378233</td>\n      <td>4380386</td>\n      <td>1971</td>\n      <td>4124</td>\n      <td>IPR023836</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>568</th>\n      <td>4378943</td>\n      <td>T</td>\n      <td>G</td>\n      <td>eccC2</td>\n      <td>eccC2_p.Asn504His</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>eccC2</td>\n      <td>Rv3894c</td>\n      <td>TIGR03924</td>\n      <td>type VII secretion protein EccCa</td>\n      <td>&lt;p&gt;This model represents the N-terminal domain...</td>\n      <td>4378233</td>\n      <td>4380386</td>\n      <td>1971</td>\n      <td>4124</td>\n      <td>IPR023836</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>569</th>\n      <td>4379680</td>\n      <td>C</td>\n      <td>G</td>\n      <td>eccC2</td>\n      <td>eccC2_p.Arg258Pro</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>eccC2</td>\n      <td>Rv3894c</td>\n      <td>TIGR03924</td>\n      <td>type VII secretion protein EccCa</td>\n      <td>&lt;p&gt;This model represents the N-terminal domain...</td>\n      <td>4378233</td>\n      <td>4380386</td>\n      <td>1971</td>\n      <td>4124</td>\n      <td>IPR023836</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>570</th>\n      <td>4407927</td>\n      <td>T</td>\n      <td>G</td>\n      <td>gid</td>\n      <td>gid_p.Glu92Asp</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>gid</td>\n      <td>Rv3919c</td>\n      <td>TIGR00138</td>\n      <td>16S rRNA (guanine(527)-N(7))-methyltransferase...</td>\n      <td>&lt;p&gt;RsmG was previously called GidB (glucose-in...</td>\n      <td>4407588</td>\n      <td>4408148</td>\n      <td>60</td>\n      <td>620</td>\n      <td>IPR003682</td>\n      <td>ncbifam</td>\n    </tr>\n    <tr>\n      <th>571</th>\n      <td>4407927</td>\n      <td>T</td>\n      <td>G</td>\n      <td>gid</td>\n      <td>gid_p.Glu92Asp</td>\n      <td>missense_variant</td>\n      <td>MODERATE</td>\n      <td>gid</td>\n      <td>Rv3919c</td>\n      <td>PF02527</td>\n      <td>rRNA small subunit methyltransferase G</td>\n      <td>&lt;p&gt;This is a family of bacterial glucose inhib...</td>\n      <td>4407600</td>\n      <td>4408160</td>\n      <td>72</td>\n      <td>632</td>\n      <td>IPR003682</td>\n      <td>pfam</td>\n    </tr>\n  </tbody>\n</table>\n<p>572 rows × 18 columns</p>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vcf.SNP"
+    "VA.DomainAnnotation()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-28T15:56:52.297190Z",
-     "start_time": "2024-09-28T15:56:52.283342Z"
+     "end_time": "2024-09-29T08:37:59.909086Z",
+     "start_time": "2024-09-29T08:37:59.818538Z"
     }
    },
-   "id": "aba28ee518b98378",
-   "execution_count": 8
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "from Bio import SeqIO\n",
-    "TBG = SeqIO.read('GCA_000195955.2_ASM19595v2_genomic.fna','fasta')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-28T16:00:05.052455Z",
-     "start_time": "2024-09-28T16:00:04.861403Z"
-    }
-   },
-   "id": "c71ead6aede9b80e",
-   "execution_count": 9
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "SeqRecord(seq=Seq('CCT'), id='AL123456.3', name='AL123456.3', description='AL123456.3 Mycobacterium tuberculosis H37Rv complete genome', dbxrefs=[])"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TBG[163704:163704+3]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-28T16:01:00.131146Z",
-     "start_time": "2024-09-28T16:01:00.117038Z"
-    }
-   },
-   "id": "5ccb80b951119929",
-   "execution_count": 12
+   "id": "bc3089e562cb640b",
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -213,7 +171,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "446993de5b28a316"
+   "id": "d880eaeb5d74a083"
   }
  ],
  "metadata": {
